--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [metadata]
-root_url = https://github.com/otosense/
+root_url = https://github.com/i2mint/
 license = apache-2.0
-author = OtoSense
 version = 0.1.1
 description = Python tools for Electric Power Quality
 description_file = README.md
@@ -18,5 +17,3 @@ include_package_data = True
 zip_safe = False
 install_requires = 
     numpy
-		
-
